# PopupUI

./: CMakeLists.txt  README.md
cmake/: DialogAnimationsConfig.cmake.in  DialogOverlayConfig.cmake.in  DialogShadowConfig.cmake.in  PopupUIConfig.cmake.in
src/popupui/animations/: CMakeLists.txt  fadepopupanimation.h  parallelpopupanimation.h  scalepopupanimation.h  slidepopupanimation.h
src/popupui/comm/: global.h
src/popupui/overlay/: CMakeLists.txt  dialogmask.cpp  dialogmask.h  dialogoverlay.cpp  dialogoverlay.h  popupanimation.h  popupproperty.h  slidedirection.h
src/popupui/overlay/animations/: fadepopupanimation.cpp  fadepopupanimation.h  parallelpopupanimation.cpp  parallelpopupanimation.h  scalepopupanimation.cpp  scalepopupanimation.h  slidepopupanimation.cpp  slidepopupanimation.h
src/popupui/shadow/: CMakeLists.txt  basepopupdlg.cpp  basepopupdlg.h  shadowwidget.cpp  shadowwidget.h
test/: CMakeLists.txt  main.cpp
test/overlay/: overlaydlg1.cpp  overlaydlg1.h  overlaydlg1.ui  overlaydlg2.cpp  overlaydlg2.h  overlaydlg2.ui  overlaytest.cpp  overlaytest.h  overlaytest.ui
